# spreadster

./: LICENSE  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
config/: settings.yaml  strategy_rules.yaml  symbols.yaml
examples/: live_state_example.json  option_omega_positions_example.json  pine_alert_template.txt  sample_input.json  tradingview_webhook_example.json
scripts/: merge_snapshots.py  run_live_cycle.sh  webhook_receiver.py
src/spreadster/: cli.py  config.py  main.py  models.py
src/spreadster/ai/: openai_client.py  prompts.py
src/spreadster/alerts/: telegram_alert.py
src/spreadster/core/: models.py  regime.py  tos.py  utils.py
src/spreadster/daily/: pipeline.py
src/spreadster/formatting/: tos_formatter.py
src/spreadster/integrations/: ai.py  inputs.py  telegram.py
src/spreadster/live/: ai_alerts.py  main.py  models.py  pipeline.py  position_manager.py  regime_engine.py  state_collector.py  utils.py
src/spreadster/pipelines/: data_pipeline.py  report_pipeline.py  signal_pipeline.py
src/spreadster/providers/: provider_factory.py  sample_provider.py
src/spreadster/regime/: day_classifier.py  range_detector.py  trend_detector.py  vwap_detector.py
src/spreadster/selector/: candidate_loader.py  strategy_router.py
src/spreadster/signals/: gap_expected_move_strategy.py
src/spreadster/strategies/: call_credit_spread.py  cash_secured_put.py  common.py  iron_condor.py  put_credit_spread.py
tests/: test_cli_smoke.py  test_day_classifier.py  test_smoke.py  test_strategy_router.py  test_tos_formatter.py
(+2 files in other folders)
