[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadster"
version = "0.3.0"
description = "Daily options spread decision engine with TOS order string generation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "openai>=1.0.0",
  "flask>=3.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
